fixed alignment boxes bootstrap

--- a/home.css
+++ b/home.css
@@ -11,8 +11,6 @@
 .container .background_img{color: white;}
 
 body{
-    margin-top: 0;
-    margin-left:0;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
   }
@@ -77,13 +75,10 @@ h1 {
 
 html, body {
     height:100%;
-    background-color: #fcf6e7;
-    margin-left: 0;
-    margin-bottom:0;
+    /* background-color: #fcf6e7; */
+    margin: 0;
 }
-p{
-    max-width:900px;
-}
+
 
 footer{
     display: flex;
@@ -110,36 +105,44 @@ footer{
     display: flex;
 }
 
-.article
-{
-    color: black;
-    width: 100%;
-    height: 30%;
-    margin-bottom: 20px;
+
+.EducationArticle{
+    display: flex;
+    justify-content: center;
+
 }
 
-.EducationImg{
-    width:px;
-    height:200px;
-    border: 1px solid black;
-    box-shadow: 5px 5px #2196f3;
-    /* margin: 20px 20px; */
-}
-
-.SportImg{
-    height:200px;;
+.SportArticle{
+    display: flex;
+    justify-content: center;
     flex-direction: row-reverse;
-    border: 1px solid black;
-    box-shadow: 5px 5px #2196f3;
+
 }
 
 
-.ExtraMuralImg{
-    width:250px;
-    height:200px;
-    border: 1px solid black;
-    box-shadow: 5px 5px #2196f3;
+.ExtraMuralArticle{
+  display: flex;
+  justify-content: center;
+
 }
+
+.EducationArticle img{
+  width: 200px;
+  height:150px;
+    
+}
+
+.SportArticle img{
+  width: 150px;
+  height:150px;
+    
+}
+
+.ExtraMuralArticle img{
+  width:200px;
+  height:150px;
+}
+
 
 .socialMediaImg{
     margin-right: 200px;
@@ -156,30 +159,7 @@ footer{
     margin-right:20px;
 }
 
-.toptext{
-    width:500px;
-    margin-right: 300px;
-}
 
-.middletext{
-    width:500px;
-    margin-left: 300px;
-}
-
-.bottomtext{
-    width:500px;
-    margin-right: 300px;
-}
-
-.bottommargin{
-    margin-bottom: 100px;
-}
-
-footer div{
-    align-self:center;
-}
-
-.container
-{
-  margin: 0;
+header{
+  margin-bottom: 100px;
 }
